# cellini-odm

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
cellini/: __init__.py
cellini/odm/: __init__.py  base.py  model.py  query.py  registry.py  types.py  utils.py
test/: test_base.py  test_model.py  test_model_fields.py  test_query.py
